обновление перед пушем

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @import url(./fonts.css);
 @import url(./animations.css);
 @import url(./variables.css);
+@import url(../vendor/lenis/lenis.css);
 
 * {
 	margin: 0;
@@ -29,6 +30,96 @@ ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+}
+
+.pattern {
+	content: '';
+	position: fixed;
+	z-index: 1000;
+	inset: 0;
+	pointer-events: none;
+	background: url(../assets/images/noise.png);
+	opacity: .02;
+}
+
+.gradient-bg {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	overflow: hidden;
+	inset: 0;
+}
+
+.gradients-contaner {
+	width: 100%;
+	height: 100%;
+	filter: blur(100px);
+	transform: translate3d(0, 0, 0);
+}
+
+.gradients-contaner > div {
+	border-radius: 50%;
+	opacity: .2;
+}
+
+.g1 {
+	mix-blend-mode: var(--blending);
+	background: radial-gradient(circle at center,
+	rgba(var(--color1)) 0,
+	rgba(var(--color1)) 50%
+	) no-repeat;
+	position: absolute;
+	width: var(--circle-size);
+	height: var(--circle-size);
+	top: calc(100% - var(--circle-size) / 2);
+	left: calc(100% - var(--circle-size) / 2);
+	transform-origin: center center;
+	animation: moveVertical 30s ease infinite;
+}
+
+.g2 {
+	mix-blend-mode: var(--blending);
+	background: radial-gradient(circle at center,
+	rgba(var(--color2)) 0,
+	rgba(var(--color2)) 50%
+	) no-repeat;
+	position: absolute;
+	width: var(--circle-size);
+	height: var(--circle-size);
+	top: calc(10% - var(--circle-size) / 2);
+	left: calc(10% - var(--circle-size) / 2);
+	transform-origin: calc(50% - 400px);
+	animation: moveInCircle 20s reverse infinite;
+}
+
+.g3 {
+	mix-blend-mode: var(--blending);
+	background: radial-gradient(circle at center,
+	rgba(var(--color3)) 0,
+	rgba(var(--color3)) 50%
+	) no-repeat;
+	position: absolute;
+	width: var(--circle-size);
+	height: var(--circle-size);
+	top: calc(50% - var(--circle-size) / 2 + 200px);
+	left: calc(50% - var(--circle-size) / 2 + 500px);
+	transform-origin: calc(50% + 400px);
+	animation: moveInCircle 40s linear infinite;
+}
+
+.interactive {
+	mix-blend-mode: var(--blending);
+	background: radial-gradient(circle at center,
+	rgba(var(--color4)) 0,
+	rgba(var(--color4)) 50%
+	) no-repeat;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	transform-origin: center center;
 }
 
 .container {
@@ -81,6 +172,7 @@ ul {
 	background: rgb(255, 255, 255, .05);
 	border-radius: var(--radius);
 	padding: 4px;
+	backdrop-filter: blur(15px);
 }
 
 .top-mnu ul {
@@ -238,6 +330,7 @@ opacity: .5;
 	justify-content: center;
 	flex-direction: column;
 	gap: 5px;
+	backdrop-filter: blur(15px);
 }
 
 .mnu-button__menu span {
@@ -507,4 +600,72 @@ color: transparent;
 
 .btn-secondary:hover span ::after {
 	opacity: 1;
+}
+
+@media (max-width: 991.98px) {
+	.top-line__center {
+		display: none;
+	}
+	.top-line {
+		justify-content: space-between;
+	}
+	.accordion__content {
+		padding: 0 20px;
+	}
+	.accordion__header h2 {
+		font-size: 65px;
+	}
+	.accordion__description {
+		width: 260px;
+		font-size: 16px;
+	}
+	.main-menu {
+		width: 97%;
+	}
+}
+
+@media (max-width: 767.98px) {
+	.accordion {
+		flex-direction: column;
+	}
+	.accordion__description {
+		width: 100%;
+	}
+	.accordion__start {
+		display: none;
+	}
+	.accordion__header h2 {
+		visibility: visible;
+		opacity: 1;
+		transform: translate(0, 0) rotate(0);
+	}
+	.accordion__description {
+		opacity: 8;
+		transform: translate(0, 0);
+	}
+	.accordion__content {
+		padding-top: 25px;
+		padding-bottom: 30px;
+	}
+	.section-head h2 {
+		font-size: 65px;
+	}
+	.gallery__wrapper {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+	.gallery {
+		margin-top: 65px;
+	}
+}
+
+@media (max-widht: 575.98px) {
+	.section-head {
+		flex-direction: column;
+	}
+	.gallery__wrapper {
+		grid-template-columns: auto;
+	}
+	.main-menu__inner li a {
+		font-size: 45px;
+	}
 }
