--- a/styles/variables.css
+++ b/styles/variables.css
@@ -20,7 +20,8 @@
 	--gradient-2: linear-gradient(0deg, var(--gradient-base));
 	--gradient-3: linear-gradient(94deg, #fff -2%, var(--color-gradient-7) 60%);
 
-
+	--blending: hard-light;
+	--circle-size: 80%;
 	--transition: all .5s;
 	--transition-mnu: 1s cubic-bezier(.8, 0, .1, 1);
 	--radius: 8px;
